--- a/src/app/pages/rm1-delivery/rm1-delivery.component.html
+++ b/src/app/pages/rm1-delivery/rm1-delivery.component.html
@@ -4,7 +4,7 @@
   <div class="delivery-header">
     <h2>
       <i class="material-icons">local_shipping</i>
-      RM1 Delivery
+      RM Delivery
     </h2>
     <div class="header-actions">
       <button class="menu-btn" (click)="goToMenu()" title="Về Menu">
